# JobRadar-AI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
app/: config.py  runner.py
app/agents/: base.py  job_curator_agent.py  job_digest_agent.py
app/database/: connection.py  init_db.py  models.py
app/profiles/: candidate_profile.md
app/scrapers/: base.py  generic_job_scraper.py  linkedin_scraper.py
app/services/: email_service.py
